added SignUpDto and modify AuthController